--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "makemoney-backend",
-  "version": "1.0.0",
-  "description": "Node.js HTTP Web Server for MakeMoney Application",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Tarif-Khan/MakeMoney-Backend.git"
-  },
-  "keywords": [
-    "Node",
-    "Rest",
-    "Server",
-    "HTTP"
-  ],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Tarif-Khan/MakeMoney-Backend/issues"
-  },
-  "homepage": "https://github.com/Tarif-Khan/MakeMoney-Backend#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
-  }
+	"type": "module",
+	"name": "makemoney-backend",
+	"version": "1.0.0",
+	"description": "Node.js HTTP Web Server for MakeMoney Application",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Tarif-Khan/MakeMoney-Backend.git"
+	},
+	"keywords": [
+		"Node",
+		"Rest",
+		"Server",
+		"HTTP"
+	],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Tarif-Khan/MakeMoney-Backend/issues"
+	},
+	"homepage": "https://github.com/Tarif-Khan/MakeMoney-Backend#readme",
+	"dependencies": {
+		"axios": "^1.6.2",
+		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"express-session": "^1.17.3",
+		"mongoose": "^8.0.3"
+	}
 }
