--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"description": "Node.js HTTP Web Server for MakeMoney Application",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node app.js"
 	},
 	"repository": {
 		"type": "git",
